agregado controllers y ruteo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Usuarios - Spring MVC Application</title>
-    <th:block th:include="layout/header"></th:block>
+   <!-- <th:block th:include="layout/header"></th:block>-->
 </head>
 <body>
-
+ESTA ES LA PANTALLA PRINCIPAL DONDE IRA EL MENU
 </body>
 </html>
