--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <title>Usuarios</title>
-    <th:block th:include="layout/header"></th:block>
+    <!--<th:block th:include="layout/header"></th:block>-->
 </head>
 <body>
 <div class="container">
