agregado boostrap, css, logo, completado crud basico, cabeceras

--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <title>Usuarios</title>
-    <!--<th:block th:include="layout/header"></th:block>-->
+    <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
 <div class="container">
@@ -29,8 +29,9 @@
                 <td th:text="${usuario.fechaingreso}">fecha ingreso</td>
                 <td th:text="${usuario.fechacaducidad}">fecha caducidad</td>
                 <td th:text="${usuario.fechabaja}">fecha baja</td>
-<!--                <td><a th:href="${'/usuarios/edit/' + usuario.id}" class="btn btn-default">Edit</a></td>
-                <td><a th:href="${'/usuarios/delete/' + usuario.id}" class="btn btn-danger">Delete</a></td>-->
+                <td><a th:href="${'./show/' + usuario.codigousuario}" class="btn btn-default">Mostrar</a></td>
+                <td><a th:href="${'./edit/' + usuario.codigousuario}" class="btn btn-default">Edit</a></td>
+                <td><a th:href="${'./delete/' + usuario.codigousuario}" class="btn btn-danger">Delete</a></td>
             </tr>
         </table>
     </div>
