--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Spring Boot Example</title>
-
+    <title>Nuevo usuario</title>
+  <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
@@ -20,9 +20,45 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Name:</label>
+                <label class="col-sm-2 control-label">Usuario Id:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{nombreusuario}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Usuario Id:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{contraseniausuario}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Usuario Id:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{controlcontrasenia}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{estadousuario}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{fechaingreso}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{fechacaducidad}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{fechabaja}"/>
                 </div>
             </div>
 
