--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Usuarios - Spring MVC Application</title>
+    <title>Usuarios - SISADMRH</title>
    <th:block th:include="header"></th:block>
 </head>
 <body>
