agregando moficacion a agregar y modificar

--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -9,7 +9,7 @@
 <div class="container">
     <h2>Rol Detalle</h2>
     <div>
-        <form class="form-horizontal" th:object="${rol}" th:action="@{./rol}" method="post">
+        <form class="form-horizontal" th:object="${rol}" th:action="@{../rol}" method="post">
             <input type="hidden" th:field="*{codigorol}"/>
             <input type="hidden" th:field="*{nombrerol}"/>
             <div class="form-group">
