--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -33,6 +33,10 @@
                                 <li><a href="#" th:href="@{/roles/}">ROLES</a></li>
                                 <li><a href="#" th:href="@{/roles/new}">Crear Rol</a></li>
                             </ul>
+                            <ul class="nav navbar-nav">
+                                <li><a href="#" th:href="@{/estados/}">Estados</a></li>
+                                <li><a href="#" th:href="@{/estados/new}">Crear estado</a></li>
+                            </ul>
 
                         </div>
                     </div>
