--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -13,13 +13,13 @@
             <input type="hidden" th:field="*{codigobeneficio}"/>
             <input type="hidden" th:field="*{nombrebeneficio}"/>
             <div class="form-group">
-                <label class="col-sm-2 control-label">COdigo de Usuario:</label>
+                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigobeneficio}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Usuario:</label>
+                <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{nombrebeneficio}"/>
                 </div>
@@ -27,40 +27,10 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Contraseña de beneficio:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{contraseniabeneficio}"/>
+                    <input type="text" class="form-control" th:field="*{descripcionbeneficio}"/>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">contorl contraseña:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{controlcontrasenia}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">estado:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{estadobeneficio}"/>
-                </div>
-            </div>
-<!--            <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha ingreso:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechaingreso}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de caducidad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechacaducidad}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de baja:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechabaja}"/>
-                </div>
-            </div>-->
-
+            
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
             </div>
