--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -26,41 +26,12 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">contraseña:</label>
+                    <label class="col-sm-2 control-label">descripcion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.contraseniabeneficio}">contraseña</p>
+                        <p class="form-control-static" th:text="${beneficio.descripcionbeneficio}">descripcion</p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">control pass:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.controlcontrasenia}">control pass</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">estado:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.estadobeneficio}">estado</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">fechaing:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechaingreso}">fecha ing</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">fecha cad:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechacaducidad}">fecha cad</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">fecha baj:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechabaja}">fecha baj</p>
-                    </div>
-                </div>
+                
             </form>
     </div>
 </div>
