--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -35,7 +35,7 @@
                             </ul>
                             <ul class="nav navbar-nav">
                                 <li><a href="#" th:href="@{/beneficios/}">BENEFICIOS</a></li>
-                                <li><a href="#" th:href="@{/beneficios/new/rol}">Crear BENEFICIO</a></li>
+                                <li><a href="#" th:href="@{/beneficios/new/beneficio}">Crear BENEFICIO</a></li>
                             </ul>
 
                         </div>
