--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Usuarios - SISADMRH</title>
+    <title>SISADMRH-Inicio</title>
    <th:block th:include="header"></th:block>
 </head>
 <body>
-ESTA ES LA PANTALLA PRINCIPAL DONDE IRA EL MENU
+<th:block th:include="footer"></th:block>
 </body>
 </html>
