--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -39,7 +39,7 @@
                             </ul>
                             <ul class="nav navbar-nav">
                                 <li><a href="#" th:href="@{/estados/}">Estados</a></li>
-                                <li><a href="#" th:href="@{/estados/new}">Crear estado</a></li>
+                                <li><a href="#" th:href="@{/estados/new/estado}">Crear estado</a></li>
                             </ul>
 
                         </div>
