--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -40,6 +40,9 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="#" th:href="@{/estados/}">Estados</a></li>
                                 <li><a href="#" th:href="@{/estados/new/estado}">Crear estado</a></li>
+                                
+                                <li><a href="#" th:href="@{/nivelescolaridades/}">Niveles escolares</a></li>
+                                <li><a href="#" th:href="@{/nivelescolaridades/new/nivelescolaridad}">Crear Nivel escolar</a></li>
                             </ul>
 
                         </div>
