--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -10,8 +10,7 @@
     <h2>Detalle niveles de escolaridad</h2>
     <div>
         <form class="form-horizontal" th:object="${nivelescolaridad}" th:action="@{../nivelescolaridad}" method="post">
-            <input type="hidden" th:field="*{codigonivelnivelescolaridad}"/>
-            <input type="hidden" th:field="*{centroeducativo}"/>
+          
             <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de nivel escolaridad:</label>
                 <div class="col-sm-10">
@@ -27,35 +26,35 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Anos aprobados:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ aniosaprobados}"/>
+                    <input type="number" class="form-control" th:field="*{aniosaprobados}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Estudios realizados:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ estudiorealizado}"/>
+                    <input type="text" class="form-control" th:field="*{estudiorealizado}"/>
                 </div>
             </div>
             
              <div class="form-group">
                 <label class="col-sm-2 control-label">Finalizado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ finalizado}"/>
+                    <input type="text" class="form-control" th:field="*{finalizado}"/>
                 </div>
             </div>
             
              <div class="form-group">
                 <label class="col-sm-2 control-label">Titulo Obtenido:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ tituloobtenido}"/>
+                    <input type="text" class="form-control" th:field="*{tituloobtenido}"/>
                 </div>
             </div>
             
              <div class="form-group">
                 <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ paisnivelescolaridad}"/>
+                    <input type="text" class="form-control" th:field="*{paisnivelescolaridad}"/>
                 </div>
             </div>
             
@@ -70,7 +69,7 @@
              <div class="form-group">
                 <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ fechahastanivelescolaridad}"/>
+                    <input type="text" class="form-control" th:field="*{fechahastanivelescolaridad}"/>
                 </div>
             </div>
             
