--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -34,7 +34,7 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">descripcion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>
+<!--                        <p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>-->
                     </div>
                 </div>
                  <div class="form-group">
@@ -58,14 +58,14 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">descripcion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${nivelescolaridad.fechadesdenivelescolaridad}">Fecha desde</p>
+<!--                        <p class="form-control-static" th:text="${nivelescolaridad.fechadesdenivelescolaridad}">Fecha desde</p>-->
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">descripcion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${nivelescolaridad.fechahastanivelescolaridad}">fecha hasta</p>
+<!--                        <p class="form-control-static" th:text="${nivelescolaridad.fechahastanivelescolaridad}">fecha hasta</p>-->
                     </div>
                 </div>
                 
