--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>Usuarios</title>
-    <th:block th:include="../templates/header"></th:block>
-</head>
+
+    <title>Nuevo beneficio</title>
+  <th:block th:include="../templates/header"></th:block>
+  </head>
 <body>
 <div class="container">
-    e aqui
-    <div th:if="${not #lists.isEmpty(beneficios)}">
-        <h2>Todos los Usuarios</h2>
-        <table class="table table-striped">
-            <tr>
-                <th>Codigo</th>
-                <th>Nombre</th>
-                <th>descripcion</th>
-                
-            </tr>
-            <tr th:each="beneficio : ${beneficios}">
-                <td th:text="${beneficio.codigobeneficio}">Codigo</td>
-                <td th:text="${beneficio.nombrebeneficio}">Nombre</td>
-                <td th:text="${beneficio.descripcionbeneficio}">descripcion</td>
-                
-                <td><a th:href="${'./show/' + beneficio.codigobeneficio}" class="btn btn-default">Mostrar</a></td>
-                <td><a th:href="${'./edit/' + beneficio.codigobeneficio}" class="btn btn-default">Edit</a></td>
-                <td><a th:href="${'./delete/' + beneficio.codigobeneficio}" class="btn btn-danger">Delete</a></td>
-            </tr>
-        </table>
+    <h2>Usuario Details</h2>
+    <div>
+        <form class="form-horizontal" th:object="${beneficio}" th:action="@{../beneficio}" method="post">
+            <input type="hidden" th:field="*{codigobeneficio}"/>
+            <input type="hidden" th:field="*{nombrebeneficio}"/>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{codigobeneficio}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{nombrebeneficio}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Contraseña de beneficio:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{descripcionbeneficio}"/>
+                </div>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="btn btn-default">Agregar</button>
+            </div>
+        </form>
     </div>
 </div>
+
 </body>
 </html>
