--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -39,29 +39,34 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2 align="center">Crear Puestos</h2>
-    <div class="row">
+<!--<div class="container">-->
+ <div class="row">
+ <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-8">
+    <h3 align="center">Crear Puestos</h3>
+   
         <form class="form-horizontal" th:object="${puesto}" th:action="@{../puesto}" method="post">
             <input type="hidden" th:field="*{codigopuesto}"/>
             <input type="hidden" th:field="*{nombrepuesto}"/>
            <div class="col-md-6">
             <div class="form-group">
-                <label class="col-sm-4 control-label">Codigo de Puesto(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Codigo de Puesto(*):</label>
+                <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{codigopuesto}"/>
                     <!--<div class="boton"><a href="#">hola</a></div>-->
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Nombre de Puesto(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Nombre de Puesto(*):</label>
+                <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{nombrepuesto}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Categoria del Puesto(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Categoria del Puesto(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
                     <select class="form-control" name="categoriapuesto" >
                         <option>Categoria 1</option>
@@ -72,14 +77,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Sueldo Base(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Sueldo Base(*):</label>
+                <div class="col-sm-7">
                     <input type="number" step="0.01" class="form-control" th:field="*{sueldobase}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Ubicacion Geografica(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Ubicacion Geografica(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                     <!--<select class="form-control" name="ubicacionpuesto" th:field="*{ubicacion}">-->
                     <select class="form-control" name="ubicacionpuesto" >
@@ -92,14 +97,14 @@
             </div>
             
             <div class="form-group">
-                <label class="col-sm-4 control-label">Codigo de Cargo(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Codigo de Cargo(*):</label>
+                <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{codigocargopuesto}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Forma de Pago(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Forma de Pago(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{formapago}"/>-->
                     
                     <select class="form-control" name="formapago" >
@@ -110,15 +115,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Aprobacion(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Aprobacion(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechaaprobacion}" name="fechaaprobacion" id="fechaaprobacion"  />
                 </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Contratacion Desde(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Contratacion Desde(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechacontrataciondesde}" name="fechacontrataciondesde" id="fechacontrataciondesde"  />
                 </div>
@@ -130,36 +135,36 @@
                  
            
            <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Contratacion Hasta(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Contratacion Hasta(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechacontratacionhasta}" name="fechacontratacionhasta" id="fechacontratacionhasta" />
                 </div>
             </div>
            <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Creacion(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Creacion(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechacreacion}" name="fechacreacion" id="fechacreacion" />
                 </div>
             </div>
            <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Baja(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Baja(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechabaja}" name="fechabaja" id="fechabaja" />
                 </div>
             </div>
            <div class="form-group">
-                <label class="col-sm-4 control-label">Fecha de Modificacion(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Fecha de Modificacion(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechamodificacion}" name="fechamodificacion" id="fechamodificacion" />
                 </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-4 control-label">Nivel del Puesto(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Nivel del Puesto(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{nivelpuesto}"/>-->
                     <select class="form-control" name="nivelpuesto" >
                         <option>Gerencial</option>
@@ -170,8 +175,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Sublinea del Puesto(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Sublinea del Puesto(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                     <select class="form-control" name="sublinea" >
                         <option>Sublinea 1</option>
@@ -182,8 +187,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Tipo de Fianza(*):</label>
-                <div class="col-sm-8">
+                <label class="col-sm-5 control-label">Tipo de Fianza(*):</label>
+                <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{tipofinanza}"/>-->
                     <select class="form-control" name="tipofinanza" >
                         <option>Fianza 1</option>
@@ -201,13 +206,17 @@
                 <button type="submit" class="btn btn-default">Guardar</button>
                 <button type="submit" class="btn btn-default">Limpiar</button>
             </div>
-        </form>
     </div>
-            </div>
-</div>
-   <th:block th:include="../templates/footer"></th:block>
+                    </form>
 
-        
+            </div>
+            </div>
+
+   <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
+
+  </div>      
        
 </body>
 <script src="../static/css/hydro/js/jquery.js"></script>
