--- a/src/main/resources/templates/fragments/puesto/puestoreporte.html
+++ b/src/main/resources/templates/fragments/puesto/puestoreporte.html
@@ -15,9 +15,15 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2 align="center">Generar Reporte de Puestos a Caducar</h2>
-    <div class="row">
+<!--<div class="container">-->
+<div class="row">
+ <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-7">
+    <h3 align="center">Generar Reporte de Puestos a Caducar</h3>
+    <br><br><br>
+    
         <form class="form-horizontal"   th:object="${puesto}"  th:action="@{../puesto}" method="post">
           
            <!--<div class="col-md-6">-->
@@ -26,14 +32,14 @@
                 <label class="col-sm-6 control-label">Fecha Desde(*):</label>
                 <div class="col-sm-2">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechaaprobacion}" name="fechaaprobacion" id="fechaaprobacion"  />
+                     <input class="form-control" type="text" th:field="*{fechacontrataciondesde}" name="fechacontrataciondesde" id="fechacontrataciondesde"  />
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-6 control-label">Fecha Hasta(*):</label>
                 <div class="col-sm-2">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechacontrataciondesde}" name="fechacontrataciondesde" id="fechacontrataciondesde"  />
+                     <input class="form-control" type="text" th:field="*{fechacontratacionhasta}" name="fechacontratacionhasta" id="fechacontratacionhasta"  />
                 </div>
             </div>
            
@@ -42,15 +48,19 @@
                    </div>-->
 
 
-            <div class="row" align="center">
-                <button type="submit" class="btn btn-default">Regresar</button>
+          
+        </form>
+      <div class="row" align="center">
+                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default">Consultar</button>
                 <button type="submit" class="btn btn-default">Limpiar</button>
             </div>
-        </form>
     </div>
+
+      <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
 </div>
-   <th:block th:include="../templates/footer"></th:block>
 
         
        
@@ -75,7 +85,7 @@
 		    var currentDate = date.getDate();
 		    var currentYear = date.getFullYear();
                     
-		    $('#fechaaprobacion').datepicker({
+		    $('#fechacontratacionhasta').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
 		       dateFormat: 'yy-mm-dd'
 		    });
@@ -85,25 +95,6 @@
 		        dateFormat: 'yy-mm-dd'
 		    });
                     
-                    $('#fechacontratacionhasta').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechacreacion').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechabaja').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechamodificacion').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
 		});
 	</script>
         
