--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,15 +12,15 @@
     </head>
 
     <body>
-        <div class="container">
+        <!--<div class="container">-->
             <div th:fragment="header">
                 <div class="jumbotron row">
-                     <div class="col-md-2">
+                     <div  class="col-md-3">
                          <div class="row text-center">
                         <img src="../../static/image/gob.png" width="200" th:src="@{/image/gob.png}"/>
                     </div>
                    </div>
-                     <div class="col-md-8">
+                     <div class="col-md-6">
                          <div class="row text-center">
                         <div class="">
                             <h2>Ministerio de Justicia y Seguridad Publica</h2>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                    </div>
-                     <div class="col-md-2">
+                     <div class="col-md-3">
                          <div class="row text-center">
                         <img src="../../static/image/mjsp.png" width="200" th:src="@{/image/mjsp.png}"/>
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                 </nav>-->
                 
-                 <nav class="navbar navbar-inverse nav flex-column">
+<!--                 <nav class="navbar navbar-inverse nav flex-column">
                     <div class="container-fluid">
 
                       <ul class="nav navbar-nav ">
@@ -99,12 +99,12 @@
                         
                       </ul>
                     </div>
-                </nav>
+                </nav>-->
               
                 
                 
             </div>
-        </div>
+        <!--</div>-->
 
 
      
