--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,18 @@
    <th:block th:include="header"></th:block>
 </head>
 <body>
-<th:block th:include="footer"></th:block>
+    <div class="row">
+        <div class="col-md-4">
+            <th:block th:include="menu"></th:block>
+        </div>
+        <div class="col-md-8">
+            
+        </div>
+        <div class="col-md-12">
+            <th:block th:include="footer"></th:block>
+        </div>
+        
+    </div>
+
 </body>
 </html>
