--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -34,7 +34,8 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">estudios realizados:</label>
                     <div class="col-sm-10">
-<!--                        <p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>-->
+                        <!-- aqui presenta probremas de parceo en estudios realizados-->
+                   <!--<p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>-->
                     </div>
                 </div>
                  <div class="form-group">
@@ -57,15 +58,14 @@
                 </div>
                  <div class="form-group">
                     <label class="col-sm-2 control-label">fecha desde:</label>
-                    <div class="col-sm-10">
-<!--                        <p class="form-control-static" th:text="${nivelescolaridad.fechadesdenivelescolaridad}">Fecha desde</p>-->
+                    <div class="col-sm-10">                      <p class="form-control-static" th:text="${#dates.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd-MMM-yyyy')}">Fecha desde</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha desde:</label>
                     <div class="col-sm-10">
-<!--                        <p class="form-control-static" th:text="${nivelescolaridad.fechahastanivelescolaridad}">fecha hasta</p>-->
+                       <p class="form-control-static" th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd-MMM-yyyy')}">fecha hasta</p>
                     </div>
                 </div>
                 
